# substring

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: test.yaml
benches/: benchmarks.rs
src/: lib.rs
tests/: char.rs  grapheme.rs  substring.rs
