[package]
name = "substring"
version = "1.4.5"
authors = ["Anders Evensen"]
description = "A substring method for string types."
license = "MIT OR Apache-2.0"
keywords = ["substring", "string", "substr", "str", "slice"]
categories = ["text-processing", "parsing", "algorithms", "no-std"]
readme = "README.md"
repository = "https://github.com/Anders429/substring"
include = ["src/*", "Cargo.toml", "LICENSE-*", "README.md"]

[dependencies]
unicode-segmentation = {version = "1.7.1", optional = true}

[dev-dependencies]
more_ranges = "0.1.0"

[features]
grapheme = ["unicode-segmentation"]
